# inventory

./: .coveragerc  .env.docker  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  API_REORGANIZATION_SUMMARY.md  BROWSER-CACHE-ISSUE.md  CHANGELOG.md  CI-CD-PIPELINE-FIXES.md  CI_PIPELINE_SUCCESS.md  CI_STATUS_SUMMARY.md  COMPLETE-FIX-SUMMARY.md  CONTEXT_TRANSFER_UPDATE.md  CONTRIBUTING.md  CURRENT_TEST_STATUS.md  DATABASE_MIGRATION_SETUP.md  DATA_SEEDING_SUMMARY.md  DEPLOY-NOW.md  DEV_ENVIRONMENT_STATUS.md  ENABLE-DEBUG-LOGGING.md  ERROR_HANDLING_IMPROVEMENTS.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FINAL_MIGRATION_SUMMARY.md  FINAL_STATUS_SUMMARY.md  FINAL_TEST_STATUS.md  GITHUB-SECRETS-QUICK-START.md  HEALTH-CHECK-FIX.md  LICENSE  LOCATION-SERVICE-TYPE-FIXES.md  LOCATION-TYPES-422-FIX.md  LOCATION-TYPES-ROUTE-FIX.md  LOCATION_DELETION_DEPLOYMENT_PLAN.md  LOCATION_REORGANIZATION_QUICK_START.md  LOGIN_DEBUG_FINDINGS.md  LOGIN_FIX_PROGRESS.md  LOGIN_ISSUE_ANALYSIS.md  LOGIN_ISSUE_SUMMARY.md  MIGRATION_INSTRUCTIONS.md  (+42 more)
.github/: renovate.json
docker/: Dockerfile.base  cloudwatch-config.json
docs/: CICD.md  DATABASE_MIGRATIONS.md  DEPLOYMENT.md  DEV_ENVIRONMENT_COST_OPTIMIZATION.md  GITHUB-SECRETS-SETUP.md  RUNBOOK.md  SEEDING_GUIDE.md  STAGING_DEPLOYMENT.md
migrations/: env.py
scripts/: Reset-DevEnvironment.ps1  add_shelf_stock.py  add_staging_movements.py  check_database_constraints.py  check_staging_constraints.py  check_warehouse_c.py  cleanup_and_create_movements.py  cleanup_bad_skus_and_create_movements.py  cleanup_duplicate_hospitals.py  cleanup_old_locations.py  cleanup_staging_locations.py  create_admin_user.py  (+52 more)
(+205 files in other folders)
